--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 DATABASE_URL="mongodb+srv://admin:admin@cluster1.qu40txt.mongodb.net/tasks?retryWrites=true&w=majority&appName=Cluster1"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29ycmVjdC1lZWwtNTQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_XCI0pr4fQEeQAJ1WAiSK3SPDONcygCUUhPq8viFp2o
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/signin
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/signup
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLECR_AFTER_SIGN_UP_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_OUT_URL=/signin
